Fix style bleed. Ensure the content area of the editor has a consistent font spec.

--- a/src/main/resources/scss/modeled-content/_editor.scss
+++ b/src/main/resources/scss/modeled-content/_editor.scss
@@ -5,8 +5,15 @@
 	background: #fff;
 
 	[contenteditable] {
+		color: $primary-grey;
 		min-height: 3rem;
 		padding: 0.6rem;
+		line-height: normal;
+		font: {
+			size: 1rem;
+			weight: normal;
+			style: normal;
+		}
 		&:focus {
 			outline: none;
 		}
